[gd_scene load_steps=18 format=3 uid="uid://buvnl24b56c7x"]

[ext_resource type="Script" path="res://Menu/menu.gd" id="1_74j1s"]
[ext_resource type="Texture2D" uid="uid://dwp5ayd4xeyl2" path="res://Menu/start_btn.png" id="1_vaaqq"]
[ext_resource type="Texture2D" uid="uid://cpchajtdq6esu" path="res://Player/chicken1_right_idle1.png" id="2_5k5m1"]
[ext_resource type="Texture2D" uid="uid://c2toru7qpyoqw" path="res://Player/chicken1_right_idle2.png" id="3_blesf"]
[ext_resource type="Texture2D" uid="uid://gpbe4rsf2t8o" path="res://Player/placeholders/placeholder1.png" id="4_6ykjj"]
[ext_resource type="Texture2D" uid="uid://ky7l45o2yl05" path="res://Menu/left_arrow.png" id="4_7lwcr"]
[ext_resource type="Texture2D" uid="uid://cr4dhcq1ojbop" path="res://Menu/left_arrow_hover.png" id="5_83nhy"]
[ext_resource type="Texture2D" uid="uid://rpc46pwiom52" path="res://Menu/right_arrow.png" id="5_sc24p"]
[ext_resource type="Texture2D" uid="uid://b1dlvne4xobud" path="res://Player/placeholders/placeholder2.png" id="5_ujmok"]
[ext_resource type="Texture2D" uid="uid://dgqykq535melj" path="res://Player/placeholders/placeholder1 - Copy.png" id="5_vl0jg"]
[ext_resource type="FontFile" uid="uid://dmoi3cxs8kmvi" path="res://fonts/PressStart2P-Regular.ttf" id="6_ejcvm"]
[ext_resource type="Texture2D" uid="uid://cckgukoywhma0" path="res://Player/placeholders/placeholder2 - Copy.png" id="7_30ss4"]
[ext_resource type="Texture2D" uid="uid://cc15tp0i5iu0o" path="res://Menu/right_arrow_hover.png" id="7_wfjth"]
[ext_resource type="Texture2D" uid="uid://st8ri1khesj0" path="res://Menu/start_btn_hover.png" id="10_p3anr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_oo4pa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5k5m1")
}, {
"duration": 1.0,
"texture": ExtResource("2_5k5m1")
}, {
"duration": 1.0,
"texture": ExtResource("3_blesf")
}, {
"duration": 1.0,
"texture": ExtResource("3_blesf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_mwv44"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6ykjj")
}, {
"duration": 1.0,
"texture": ExtResource("5_vl0jg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_bmnd4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ujmok")
}, {
"duration": 1.0,
"texture": ExtResource("7_30ss4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Menu" type="Node2D"]
script = ExtResource("1_74j1s")

[node name="background" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="background"]
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0.991462, 0.726191, 0.22076, 1)

[node name="foreground" type="CanvasLayer" parent="."]

[node name="chickenBox" type="CanvasLayer" parent="foreground"]

[node name="ColorRect" type="ColorRect" parent="foreground/chickenBox"]
offset_left = 429.0
offset_top = 193.0
offset_right = 722.0
offset_bottom = 460.0
color = Color(0.766193, 0.469742, 0.148483, 1)

[node name="boxBG" type="ColorRect" parent="foreground/chickenBox"]
anchors_preset = -1
anchor_left = 0.384
anchor_top = 0.304
anchor_right = 0.615
anchor_bottom = 0.659
offset_left = -0.368011
offset_top = 9.00798
offset_right = -0.47998
offset_bottom = 19.968
grow_horizontal = 2
grow_vertical = 2
color = Color(0.628342, 0.897131, 0.897039, 1)

[node name="shadow" type="ColorRect" parent="foreground/chickenBox"]
offset_left = 495.0
offset_top = 409.0
offset_right = 644.0
offset_bottom = 436.0
color = Color(0.345098, 0.592157, 0.619608, 0.745098)

[node name="chicken1" type="AnimatedSprite2D" parent="foreground/chickenBox"]
unique_name_in_owner = true
position = Vector2(575, 326)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_oo4pa")

[node name="chicken2" type="AnimatedSprite2D" parent="foreground/chickenBox"]
unique_name_in_owner = true
visible = false
position = Vector2(580, 326)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_mwv44")

[node name="chicken3" type="AnimatedSprite2D" parent="foreground/chickenBox"]
unique_name_in_owner = true
visible = false
position = Vector2(573, 328)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_bmnd4")

[node name="Label" type="Label" parent="foreground"]
modulate = Color(0.761733, 0.13274, 0.176153, 1)
offset_left = 118.0
offset_top = 44.0
offset_right = 1168.0
offset_bottom = 249.0
theme_override_fonts/font = ExtResource("6_ejcvm")
theme_override_font_sizes/font_size = 130
text = "CHIMKEN"

[node name="leftArrow" type="TextureButton" parent="foreground"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -291.0
offset_top = -59.0
offset_right = -172.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("4_7lwcr")
texture_hover = ExtResource("5_83nhy")

[node name="rightArrow" type="TextureButton" parent="foreground"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 168.0
offset_top = -59.0
offset_right = 287.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_sc24p")
texture_hover = ExtResource("7_wfjth")

[node name="startBtn" type="TextureButton" parent="foreground"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -130.5
offset_top = -158.0
offset_right = 130.5
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("1_vaaqq")
texture_hover = ExtResource("10_p3anr")

[connection signal="pressed" from="foreground/leftArrow" to="." method="_on_left_arrow_pressed"]
[connection signal="pressed" from="foreground/rightArrow" to="." method="_on_right_arrow_pressed"]
[connection signal="pressed" from="foreground/startBtn" to="." method="_on_start_btn_pressed"]
